git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "564d758"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "564d758"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -1,6 +1,11 @@
+   Release 1.23.2
+   Fixed for latest rakudo
+   - a multi submethod BUILD can no longer be directly inherited. Changed
+     it to a singular method which calls a multi method
+
    Release 1.23.1
    Replaced dynamic Pand Build.pm with semi-static make_metrics.pl.
-   - generated AFM foiles should seldom change. build-time generation of modules
+   - generated AFM files should seldom change. build-time generation of modules
      was overkill. generated sources are now checked in, and can be occasionally
      regenerated, when needed.
    Release 1.23
