git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "7b9859e"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "7b9859e"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/doc/Language/containers.pod
+++ b/perl6/doc/doc/Language/containers.pod
@@ -123,6 +123,17 @@ changes the contents of the other.
 You've seen this situation before: it is exactly what happened with the
 signature parameter marked as C<is rw>.
 
+Sigilless variabes also bind by default and so do parameters with the trait C<is raw>.
+
+    my $a = 42;
+    my \b = $a;
+    b++;
+    say $a;         # 43
+
+    sub f($c is raw) { $c++ }
+    f($a);
+    say $a;         # 44
+
 =head2 Scalar containers and listy things
 
 There are a number of positional container types with slightly different
@@ -257,4 +268,31 @@ Methods generally don't care whether their invocant is in a scalar, so
 
 maps over a list of three elements, not of one.
 
+=head2 Custom containers
+
+To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
+methods that are called when values are stored or fetched from the container.
+Type checks are not done by the container itself and other restrictions like
+readonlyness can be broken. The returned value must therefor be of the same
+type then the type of the variable it is bound to. We can use type captures to
+work with types in Perl 6.
+
+    sub lucky(::T $type) {
+            my T $c-value; # closure variable
+            return Proxy.new(
+                    FETCH => method (){ $c-value},
+                    STORE => method (T $new-value){
+                            X::OutOfRange.new(what => 'number', got => '13', range => '-Inf .. 12, 14..Inf').throw
+                                    if $new-value == 13;
+                            $c-value = $new-value;
+                    }
+            );
+    }
+    
+    my Int $a := lucky(Int);
+    say $a = 12;
+    say $a = 'FOO'; # X::TypeCheck::Binding
+    say $a = 13; # X::OutOfRange
+
 =end pod
+
