--- a/perl6/doc/doc/HomePage.pod
+++ b/perl6/doc/doc/HomePage.pod
@@ -1,5 +1,5 @@
 =begin Html
-<img style="float: right; margin: 0 0 1em 1em" src="/images/camelia.png" alt =""/>
+<img style="float: right; margin: 0 0 1em 1em" src="/images/camelia.png" alt="" id="home_logo"/>
 Welcome to the official documentation of the <a href="http://perl6.org">Perl 6</a>
 programming language!
 Besides online browsing and searching, you can also
