--- a/perl6/doc/doc/Language/modules.pod
+++ b/perl6/doc/doc/Language/modules.pod
@@ -358,6 +358,7 @@ To share your module, do the following:
 
     =for code :allow<R>
     {
+        "perl" : "6.*",
         "name" : "Vortex::TotalPerspective",
         "version" : "0.1.0",
         "description" : "Wonderful simulation to get some perspective.",
@@ -376,7 +377,8 @@ To share your module, do the following:
     right now, you can just put in an asterisk (*) for the version.
 
     In C<provides> section, include all the namespaces provided by
-    your distribution.
+    your distribution and set C<perl> version to the minimum perl version
+    your module works with
 
     =end item
 
