--- a/perl6/doc/doc/Type/IO/Handle.pod
+++ b/perl6/doc/doc/Type/IO/Handle.pod
@@ -24,7 +24,8 @@ Read one line from a file:
 
 =head2 method getc
 
-Read a single character from the input stream.
+Read a single character from the input stream or return Nil. The operation is blocking
+and the stream may be buffered.
 
 =head2 method eof
 
