--- a/perl6/doc/doc/Type/Signature.pod
+++ b/perl6/doc/doc/Type/Signature.pod
@@ -83,7 +83,7 @@ its type constraint.
 :(B<L<Int>>, B<L<Positional>>)  # just a type is also fine (two parameters)
 sub baz (B<L<Str>>) { "Got passed a Str" }
 
-Type constraints may also be L<type captures|Signature/#method_type_captures>.
+Type constraints may also be L<type captures|/type/Signature#Type_Captures>.
 
 In addition to those I<nominal> types, additional constraints can
 be placed on parameters in the form of code blocks which must return
@@ -198,6 +198,26 @@ is not available inside the called function.
 Slurpy parameters have special behaviors when combined with some
 L<traits and modifiers|#Parameter_Traits_and_Modifiers>,
 as described below.
+
+=head2 Type Captures
+
+Type Captures allow to defer the specification of a type constrain to the time
+the function is called. They allow to refer to a type both in the signature and
+the function body.
+
+    sub f(::T $p1, T $p2, ::C){
+        # $p1 and $p2 are of the same type T, that we don't know yet
+        # C will hold a type we derive from a type object or value
+        my C $closure = $p1 / $p2;
+            return sub (T $p1) {
+                    $closure * $p1;
+            }
+    }
+    
+    # The first parameter is Int and so must be the 2nd.
+    # We derive the 3rd type from calling the operator that is used in &f.
+    my &s = f(10, 2, Int.new / Int.new);
+    say s(2); # 10 / 2 * 2 == 10
 
 =head2 Positional vs. Named
 
