--- a/perl6/doc/doc/Language/concurrency.pod
+++ b/perl6/doc/doc/Language/concurrency.pod
@@ -215,40 +215,65 @@ consumed by one or more consumers simultaneously in a manner similar to
 "events" in other programming languages and can be seen as enabling
 "Event Driven" or reactive designs.
 
-L<Supply> is a role that can be composed into your own types, but will
-frequently be used as a "type punned" class to create standalone objects.
-
 At its simplest, a L<Supply> is a message stream that can have multiple
 subscribers created with the method C<tap> on to which data items can be
-placed with C<emit>:
+placed with C<emit>.
 
-    my $supply = Supply.new();
+The L<Supply> can either be C<live> or C<on-demand>.  A C<live> L<Supply>
+is created by the L<Supplier> factory, each emitted value is passed to
+all the active tappers as they are added:
+
+    my $supplier = Supplier.new;
+    my $supply   = $supplier.Supply;
 
     $supply.tap( -> $v { say $v });
 
     for 1 .. 10 {
-        $supply.emit($_);
+        $supplier.emit($_);
     }
+
+Note that the C<tap> is called on a L<Supply> object created by the
+L<Supplier> and new values are emitted on the L<Supplier>.
+
+Or alternatively as an C<on-demand> L<Supply> created by the C<supply>
+keyword:
+
+    my $supply = supply { 
+        for 1 .. 10 { 
+            emit($_); 
+        } 
+    } 
+    $supply.tap( -> $v { say $v });
+
+In this case the code in the supply block is executed every time the
+L<Supply> returned by C<supply> is tapped, as demonstrated by:
+
+    my $supply = supply { 
+        for 1 .. 10 { 
+            emit($_); 
+        } 
+    } 
+    $supply.tap( -> $v { say "First : $v" });
+    $supply.tap( -> $v { say "Second : $v" });
 
 The C<tap> method returns a L<Tap> object which can be used to obtain
 information about the tap and also to turn it off when we are no longer
 interested in the events:
 
-    my $supply = Supply.new;
-    my $tap = $supply.tap(-> $v { say $v }, closing => {say "closing"});
-    $supply.emit("OK");
-    $tap.close; # Will trigger the closing callback
-    $supply.emit("Won't trigger the tap");
+    my $supplier = Supplier.new;
+    my $supply   = $supplier.Supply;
 
-Calling C<close> on the L<Tap> object (or calling C<close> on the
-supply object with the tap object as an argument,) triggers the callback
-specified by C<closing> if present and stop further events being sent to
-the tap callback but otherwise leave the supply intact to receive further
-events. Calling C<done> on the supply object similarly calls the C<done>
-callback that may be specified for any taps, but does not prevent any
-further events being emitted to the stream, or taps receiving them.
+    my $tap = $supply.tap( -> $v { say $v });
 
-The method C<interval> returns a new supply which periodically
+    $supplier.emit("OK");
+    $tap.close;
+    $supplier.emit("Won't trigger the tap");
+
+Calling C<done> on the supply object calls the C<done> callback that
+may be specified for any taps, but does not prevent any further events
+being emitted to the stream, or taps receiving them.
+
+The method C<interval> returns a new C<on-demand> supply which periodically
 emits a new event at the specified interval. The data that is emitted
 is an integer starting at 0 that is incremented for each event. The
 following code outputs 0 .. 5 :
@@ -258,10 +283,22 @@ following code outputs 0 .. 5 :
 	$supply.tap(-> $v { say $v });
 	sleep 10;
 
-A second argument can be supplied which specifies a delay in seconds
-before the first event is fired. Each tap of a supply created by
-C<interval> has its own sequence starting from 0, as illustrated
-by the following:
+This could also be written using the C<react> keyword:
+
+    react {
+        whenever Supply.interval(2) -> $v {
+            say $v;
+            done() if $v == 4;
+        }
+    }
+
+Here the C<whenever> creates a tap on the L<Supply> from the provided block,
+the C<react> being exited when C<done()> is called in one of the taps.
+
+A second argument can be supplied to C<interval> which specifies a delay
+in seconds before the first event is fired. Each tap of a supply created
+by C<interval> has its own sequence starting from 0, as illustrated by
+the following:
 
     my $supply = Supply.interval(2);
     $supply.tap(-> $v { say "First $v" });
@@ -269,34 +306,45 @@ by the following:
     $supply.tap(-> $v { say "Second $v"});
     sleep 10;
 
+An C<on-demand> L<Supply> can also be created from a list of values that
+will be emitted in turn, thus the first C<on-demand> example could be 
+written as:
+
+    react {
+        whenever Supply.from-list(1..10) -> $v {
+            say $v;
+        }
+    }
+
 An existing supply object can be filtered or transformed, using the methods
 C<grep> and C<map> respectively, to create a new supply in a manner like
 the similarly named list methods: C<grep> returns a supply such that only
 those events emitted on the source stream for which the C<grep> condition
 is true is emitted on the second supply:
 
-    my $supply = Supply.new;
+    my $supplier = Supplier.new;
+    my $supply = $supplier.Supply;
     $supply.tap(-> $v { say "Original : $v" });
     my $odd_supply = $supply.grep({ $_ % 2 });
     $odd_supply.tap(-> $v { say "Odd : $v" });
     my $even_supply = $supply.grep({ not $_ % 2 });
     $even_supply.tap(-> $v { say "Even : $v" });
     for 0 .. 10 {
-        $supply.emit($_);
+        $supplier.emit($_);
     }
 
 C<map> returns a new supply such that for each item emitted to the
 original supply a new item which is the result of the expression passed
 to the C<map> is emitted:
 
-     my $supply = Supply.new;
+     my $supplier = Supplier.new;
+     my $supply = $supplier.Supply;
      $supply.tap(-> $v { say "Original : $v" });
      my $half_supply = $supply.map({ $_ / 2 });
      $half_supply.tap(-> $v { say "Half : $v" });
      for 0 .. 10 {
-         $supply.emit($_);
+         $supplier.emit($_);
      }
-
 
 =head2 Channels
 
