--- a/perl6/doc/doc/Type/Parameter.pod
+++ b/perl6/doc/doc/Type/Parameter.pod
@@ -13,7 +13,7 @@ and call C<.params> on it to obtain a list of the Parameters.
 
     my $sig   = :(Str $x);
     my $param = $sig.params[0];
-    say $sig.type;              # Str()
+    say $param.type;              # Str()
 
 See L<Signature> for more information, and also for an explanation
 on what most of the concepts related to parameters mean.
