git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "6848ad0"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "6848ad0"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/perl6/doc/doc/Type/IO/Handle.pod
+++ b/perl6/doc/doc/Type/IO/Handle.pod
@@ -36,10 +36,11 @@ Returns L<Bool::True> if the read operations have exhausted the content of the f
     method lines($limit = Inf)
 
 Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lines.
+The new line separator (e.g. $*IN.nl) will be excluded.
 
     =for code :allow<B>
     my @data;
-    my $data-file = open 'readings.csv'
+    my $data-file = open 'readings.csv';
     for B<$data-file.lines> -> $line {
         @data.push($line.split(','))
     }
