--- a/perl6/doc/doc/HomePage.pod
+++ b/perl6/doc/doc/HomePage.pod
@@ -1,10 +1,10 @@
 =begin Html
 <img style="float: right; margin: 0 0 1em 1em" src="/images/camelia.png" alt="" id="home_logo"/>
-Welcome to the official documentation of the <a href="http://perl6.org">Perl 6</a>
+Welcome to the official documentation of the <a href="https://perl6.org">Perl 6</a>
 programming language!
 Besides online browsing and searching, you can also
 Z<< <a>download</a> an offline HTML or PDF copy, and>>
-<a href="http://github.com/perl6/doc">contribute</a>
+<a href="https://github.com/perl6/doc">contribute</a>
 by reporting mistakes or sending patches.
 
 <hr>
@@ -35,12 +35,12 @@ Z<<
 <hr>
 
 
-<p>The Perl 6 homepage offers <a href="http://perl6.org/documentation/">a
+<p>The Perl 6 homepage offers <a href="https://perl6.org/documentation/">a
 comprehensive list of Perl 6 documentation</a>, including tutorials, HowTos
-and <a href="http://faq.perl6.org/">FAQs (Frequently Asked Questions)</a>.</p>
+and <a href="/language/faq">FAQs (Frequently Asked Questions)</a>.</p>
 
 <p>
-You may also be interested in the Perl 6 <a href="http://design.perl6.org">design documents</a>,
+You may also be interested in the Perl 6 <a href="https://design.perl6.org">design documents</a>,
 which are in some places more complete than this documentation, but targeted
 toward compiler writers rather than users of the language.
 Documentation for the different but related <a href="http://perl.org/">Perl 5</a> language
