--- a/perl6/doc/doc/Language/5to6-nutshell.pod
+++ b/perl6/doc/doc/Language/5to6-nutshell.pod
@@ -31,7 +31,7 @@ either/or thinking that leads to fights.
 
 =head2 CPAN
 
-See L<http://modules.perl6.org/> .
+See L<https://modules.perl6.org/> .
 
 If the module that you were using has not been converted to Perl 6, and no
 alternative is listed in this document, then its use under Perl 6 may not
@@ -152,7 +152,7 @@ conflict with an existing postfix/postcircumfix operator.>
 
 =end item
 
-However, note that you can use L<unspace|http://design.perl6.org/S02.html#Unspaces>
+However, note that you can use L<unspace|https://design.perl6.org/S02.html#Unspaces>
 to add whitespace in Perl 6 code in places where it is otherwise not
 allowed:
 
@@ -165,8 +165,8 @@ allowed:
                     .findnodes("/library/book");
 
 See also L<S03#Minimal whitespace
-DWIMmery|http://design.perl6.org/S03.html#Minimal_whitespace_DWIMmery> and
-L<S04#Statement parsing|http://design.perl6.org/S04.html#Statement_parsing>
+DWIMmery|https://design.perl6.org/S03.html#Minimal_whitespace_DWIMmery> and
+L<S04#Statement parsing|https://design.perl6.org/S04.html#Statement_parsing>
 in the Perl 6 design docs.
 
 
@@ -490,7 +490,7 @@ type of its arguments.
 While the operator has not changed, the rules for what exactly is matched
 depends on the types of both arguments, and those rules are far from
 identical in Perl 5 and Perl 6. See
-L<S03/Smart matching|http://design.perl6.org/S03.html#Smart_matching>
+L<S03/Smart matching|https://design.perl6.org/S03.html#Smart_matching>
 
 =head3 C<& | ^> String Bitwise ops
 =head3 C<& | ^> Numeric Bitwise ops
@@ -835,7 +835,7 @@ In Perl 6, the C<~~> smartmatch op is used instead.
 
 Alternately, the new C<.match> and C<.subst> methods can be used. Note that
 C<.subst> is non-mutating. See
-L<S05/Substitution|http://design.perl6.org/S05.html#Substitution>.
+L<S05/Substitution|https://design.perl6.org/S05.html#Substitution>.
 
 =head3 Move modifiers
 
@@ -992,7 +992,7 @@ before translating into Perl 6.
 =head2 Command-line flags
 
 See
-L<S19/commandline|http://design.perl6.org/S19.html#Command_Line_Elements>
+L<S19/commandline|https://design.perl6.org/S19.html#Command_Line_Elements>
 
 Unchanged:
 
