--- a/perl6/doc/doc/Language/faq.pod
+++ b/perl6/doc/doc/Language/faq.pod
@@ -42,8 +42,8 @@ Perl 5's perlbrew and the equivalent Python and Ruby tools.
 
 The most reliable information is to be found either under the perl6.org domains or directly linked from it.
 
-L<http://www.perl6.org/documentation/|http://www.perl6.org/documentation/> with
-L<http://doc.perl6.org/|http://doc.perl6.org/> as the canonical technical reference.
+L<https://www.perl6.org/documentation/|https://www.perl6.org/documentation/> with
+L<https://doc.perl6.org/|https://doc.perl6.org/> as the canonical technical reference.
 
 There is much good recent material on Youtube but be careful to check any dates
 on webpages since much of the Perl 6 information on random websites found by
@@ -60,18 +60,18 @@ is the measure of how complete a Perl 6 implementation is.
 
 =head2 Is there a glossary of Perl 6 related terms?
 
-See L<S99|http://design.perl6.org/S99.html>
+See L<S99|https://design.perl6.org/S99.html>
 
 =head2 I'm a Perl 5 programmer. Where is a list of differences between Perl 5 and 6?
 
-See the pod with the 5to6- prefix under L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
+See the pod with the 5to6- prefix under L<https://doc.perl6.org/language.html|https://doc.perl6.org/language.html>
 
 =head1 Modules
 
 =head2 Is there a CPAN for Perl 6?
 
 There isn't yet a module repository for Perl 6 as sophisticated as CPAN. But
-L<modules.perl6.org|http://modules.perl6.org/> has a list of known Perl 6
+L<modules.perl6.org|https://modules.perl6.org/> has a list of known Perl 6
 modules called the "ecosystem" hosted on github, and
 L<panda|https://github.com/tadzik/panda/> can install those that work with
 L<rakudo|http://rakudo.org/>.
@@ -85,7 +85,7 @@ well with most Perl 5 modules. It can even run Perl 5 Catalyst and DBI.
 
 =head2 Can I use C and C++ from Perl 6?
 
-L<Nativecall|http://docs.perl6.org/language/nativecall> makes this particularly easy.
+L<Nativecall|https://docs.perl6.org/language/nativecall> makes this particularly easy.
 
 =head2 Nativecall can't find libfoo.so and I only have libfoo.so.1.2!
 
@@ -510,7 +510,7 @@ It also offers
   caught at compile time.
 
 Please see the L<feature comparison
-matrix|http://perl6.org/compilers/features> for an overview of implemented
+matrix|https://perl6.org/compilers/features> for an overview of implemented
 features.
 
 =head2 Is Perl 6 fast enough for me?
