--- a/perl6/doc/doc/Language/modules.pod
+++ b/perl6/doc/doc/Language/modules.pod
@@ -9,7 +9,7 @@
 A module is usually a source file or set of source filesN<Technically
 a module is a set of I<compunits> which are usually files but could
 come from anywhere as long as there is a I<compunit repository> that
-can provide it. See L<S11|http://design.perl6.org/S11.html>.> that
+can provide it. See L<S11|https://design.perl6.org/S11.html>.> that
 expose Perl 6 constructs. These are typically packages
 (L<classes|/language/objects#Classes>,
 L<roles|/language/objects#Roles>, L<grammars|Grammar>),
@@ -284,13 +284,13 @@ passing C<:DEFAULT> to C<use> along with your positional parameters.
 
 If you've written a Perl 6 module and would like to share it with the
 community, we'd be delighted to have it listed in the L<Perl 6 modules
-directory|http://modules.perl6.org>. C<:)>
+directory|https://modules.perl6.org>. C<:)>
 
 For now, the process requires that you use git for your module's version
 control.
 
 The instructions herein require that you have a
-L<GitHub|http://www.github.com> account so that your module can be shared
+L<GitHub|https://www.github.com> account so that your module can be shared
 from its GitHub repository.
 
 To share your module, do the following:
@@ -338,7 +338,7 @@ To share your module, do the following:
     C<Test>. It's quite similar to Perl 5's C<Test::More>.
 
     =item To document your modules, use L<Perl 6 Pod |
-    http://design.perl6.org/S26.html> markup inside your modules. Module
+    https://design.perl6.org/S26.html> markup inside your modules. Module
     documentation is most appreciated and will be especially important once
     the Perl 6 module directory (or some other site) begins rendering Pod docs
     as HTML for easy browsing.
@@ -372,7 +372,7 @@ To share your module, do the following:
 
     For choosing a version numbering scheme, perhaps use
     "major.minor.patch" (see L<the spec on versioning |
-    http://design.perl6.org/S11.html#Versioning> for further
+    https://design.perl6.org/S11.html#Versioning> for further
     details). If the version number doesn't matter to you or your users
     right now, you can just put in an asterisk (*) for the version.
 
@@ -398,8 +398,8 @@ To share your module, do the following:
     else ask them if they could please add it for you.
 
     =item After the pull request has been accepted, wait for an hour. If
-    your module doesn't show up on L<http://modules.perl6.org/>, please
-    view the log file at L<http://modules.perl6.org/log/update.log> to see
+    your module doesn't show up on L<https://modules.perl6.org/>, please
+    view the log file at L<https://modules.perl6.org/log/update.log> to see
     if it identifies an error with your module or meta file.
 
 B<That's it! Thanks for contributing to the Perl 6 community!>
