--- a/perl6/doc/doc/Type/IO/Socket/INET.pod
+++ b/perl6/doc/doc/Type/IO/Socket/INET.pod
@@ -44,7 +44,7 @@ $conn.close;
             :$port,
             :$family = 2,
             :$encoding = 'utf-8',
-            :nl-in = "\r\n",
+            :$nl-in = "\r\n",
         ) returns IO::Socket::INET:D
     multi method new(
             :$localhost,
@@ -52,7 +52,7 @@ $conn.close;
             :$family = 2,
             :$listen,
             :$encoding = 'utf-8',
-            :nl-in = "\r\n",
+            :$nl-in = "\r\n",
         ) returns IO::Socket::INET:D
 
 Creates a new socket.
@@ -64,7 +64,7 @@ it opens a connection to C<$host> on port C<$port>.
 C<$family> defaults to 2 for IPv4, and can be set to 3 for IPv6.
 
 For text operations (such as L<#method lines> and L<#method get>),
-C<$encoding> specifies the encoding, and C<$input-line-separator> determines
+C<$encoding> specifies the encoding, and C<$nl-in> determines
 the character(s) that separate lines.
 
 =head1 Methods
