git subrepo clone --force git://github.com/thundergnat/Sort-Naturally.git thundergnat/Sort-Naturally
subrepo:
  subdir:   "thundergnat/Sort-Naturally"
  merged:   "ee51667"
upstream:
  origin:   "git://github.com/thundergnat/Sort-Naturally.git"
  branch:   "master"
  commit:   "ee51667"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/thundergnat/Sort-Naturally/README
+++ b/thundergnat/Sort-Naturally/README
@@ -86,7 +86,7 @@ To create the method .nsort that can be used similar to .sort:
 
 use Sort::Naturally;
 
-use MONKEY_TYPING;
+use MONKEY-TYPING;
 augment class Any {
     method nsort (*@) { self.list.flat.sort( { .&naturally } ) };
 }
